<resources>
    <string name="app_name">Dubaby</string>
    <string name="todo_i">TODO</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="create_an_account">Create an Account</string>
    <string name="text_register">If you not registered, click below</string>
    <string name="text_button_sign_in">Sign In</string>
    <string name="category_name">Categories</string>
    <string name="product_price">$%1$.2f</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="hint_email">Email</string>
    <string name="user_categories">User Categories</string>
    <string name="product_title">Product Title</string>
    <string name="_0_0">$0.0</string>
    <string name="home">Home</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="create_an_account_">Create an Account</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="categories">Categories</string>
    <string name="Back">back</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account_">Create Account</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="rent">Rent</string>
    <string name="donate">Donate</string>
    <string name="categories_">Categories</string>
    <string name="product_title_">Product Title</string>
    <string name="image_url">Image URL</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>

</resources>